2005-06-04    <tino@firebird.03.softkill.net>

	* Makefile.proto (diet): added

	* filetool.h (tino_file_dirname): bug fixed
	(tino_file_dirfileoffset): FATAL added if buf==NULL

	* Makefile-test.sh (testcc): Debugging options added.  -lrt added,
	too, to support -O0 for better debugging with gdb.

	* idea-vdl.h, io.h, ob.h, Makefile-test.sh (LDLIBS): UNIT TEST
	FAILS added to notify that this parts cannot pass the unit tests
	yet.

	* hasher.h (hasher): parantheses added for more clarity, include
	reference fixed.

	* proc.h (tino_wait_child): stupid typo corrected: alarm

2005-04-26    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_dirname, tino_file_filename): added

	* file.h (tino_file_notexists): added

2005-04-24    <tino@firebird.03.softkill.net>

	* file.h: tino_file_notdir added

	* Makefile-test.sh (genit, runit): New TEST case: TESTCMP for filetool.h

	* filetool.h: added

2005-04-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (all): No more dependency of Makefile: all

2005-04-15    <tino@firebird.03.softkill.net>

	* Makefile-tar.sh, Makefile (GAT): startet to add gat support

	* Makefile.proto (tino/lib.h): removed
	(install): now, strip is only called if cp is successful

	* Makefile (lib.h): lib.h now is a pure dummy

2005-04-10    <tino@firebird.03.softkill.net>

	* fatal.h (TINO_FATAL_IF): added

2005-03-15    <tino@firebird.03.softkill.net>

	* xd.h: include fixes, does not need fatal.h

2005-03-04    <tino@firebird.03.softkill.net>

	* hasher.h (hasher): The old hash band functions were poor, so
	reverted back to slower but mathematically correct solution using
	a polynomial: hash[n]=f[x[i]](n)=sum[i=0..len](x[i]*n^i) where
	x[i] is the data (actually, it's calculated backwards).  Hopefully
	modern processors will sometimes become able to calculate the
	mul+add in one cpu cycle.

	* file.h (tino_file_mmap_anon): added

	* ex.h (tino_verror): support of tino_verror_fn added

	* dir.h (tino_dir_read): created
