@@ -1,3 +1,7 @@
+2005-06-22    <tino@firebird.03.softkill.net>
+
+	* proc.h (tino_wait_child): fixed delta calculation.
+
 2005-06-04    <tino@firebird.03.softkill.net>
 
 	* Makefile.proto (diet): added
